--- a/templates/gemba/paretos_view.html
+++ b/templates/gemba/paretos_view.html
@@ -22,7 +22,7 @@
             <td>{{ item.pareto_date|date:"d-m-Y" }}</td>
             <td>{{ item.line }}</td>
             <td>{{ item.shift }}</td>
-            <td>{{ item.ops }}</td>
+            <td>{{ item.ops_otg }}</td>
             <td>{{ item.availability }}%</td>
             <td>{{ item.performance }}%</td>
             <td>{{ item.quality }}%</td>
