Gemba App changes

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="card h-100 border-start-lg border-start-secondary">
                 <div class="card-body">
-                    <div class="h5">Recent Downtime Reasons</div>
+                    <div class="h5">Recent causes of downtime</div>
                     <table class="small-table">
                         <thead>
                             <tr>
@@ -75,7 +75,7 @@
         <div class="row">
             <div class="card h-100 border-start-lg border-start-success">
                 <div class="card-body">
-                   <div class="h5">Recent Scrap Reasons</div>
+                   <div class="h5">Latest reasons for scrapping</div>
                     <table class="small-table">
                         <thead>
                             <tr>
