--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,12 +2,14 @@
 {% block content %}
 {% load widget_tweaks %}
 {% load mathfilters %}
+{% load static %}
 <div class="container">
     <div class="left-dashboard">
         <div class="row">
             <div class="card h-100 border-start-lg border-start-primary">
                 <div class="card-body">
-                    <div class="h5">Recently Produced</div>
+                    <div class="h6"><img src="{% static 'pics/done.png' %}" alt="Done" width="23" height="23">
+                        Recently Produced</div>
                     <table class="small-table">
                         <thead>
                             <tr>
@@ -33,17 +35,16 @@
                        </tbody>
                     </table>
                     </br>
-                    <a class="text-arrow-icon small text-primary" href="{% url 'gemba_app:pareto-details' %}">
-                        Display more produced
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
-                    </a>
+                    <a class="small text-primary" href="{% url 'gemba_app:pareto-details' %}">
+                        Display more produced &#11166;</a>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="card h-100 border-start-lg border-start-secondary">
                 <div class="card-body">
-                    <div class="h5">Recent causes of downtime</div>
+                    <div class="h6"><img src="{% static 'pics/stop.png' %}" alt="Stop" width="23" height="23">
+                        Recent causes of downtime</div>
                     <table class="small-table">
                         <thead>
                             <tr>
@@ -65,17 +66,15 @@
                        </tbody>
                     </table>
                     </br>
-                    <a class="text-arrow-icon small text-secondary" href="{% url 'gemba_app:downtimes-view' %}">
-                        Display more downtime reasons
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
-                    </a>
+                    <a class="small text-secondary" href="{% url 'gemba_app:downtimes-view' %}">
+                        Display more downtime reasons &#11166;</a>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="card h-100 border-start-lg border-start-success">
                 <div class="card-body">
-                   <div class="h5">Latest reasons for scrapping</div>
+                   <div class="h6"><img src="{% static 'pics/bin.png' %}" alt="Bin" width="18" height="23"> Latest reasons for scrapping</div>
                     <table class="small-table">
                         <thead>
                             <tr>
@@ -97,10 +96,8 @@
                        </tbody>
                     </table>
                     </br>
-                    <a class="text-arrow-icon small text-success" href="{% url 'gemba_app:scraps-view' %}">
-                        Display more scrap reasons
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
-                    </a>
+                    <a class="small text-success" href="{% url 'gemba_app:scraps-view' %}">
+                        Display more scrap reasons &#11166;</a>
                 </div>
             </div>
         </div>
@@ -169,7 +166,8 @@
         <div class="row">
             <div class="card h-100 border-end-lg border-end-blue">
                 <div class="card-body">
-                    <div class="h6">Yesterday's 5 best results ({{ yesterday|date:'d-m-Y' }})</div>
+                    <div class="h6"><img src="{% static 'pics/winner.png' %}" alt="Winner" width="18" height="25">
+                        Yesterday's 5 best results ({{ yesterday|date:'d-m' }})</div>
                     <table class="small-table">
                         <thead>
                             <tr>
@@ -197,10 +195,8 @@
                        </tbody>
                     </table>
                     </br>
-                    <a class="text-arrow-icon small text-blue" href="{% url 'gemba_app:report-choices-2' %}">
-                        Display more produced
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
-                    </a>
+                    <a class="small text-blue" href="{% url 'gemba_app:report-choices-2' %}">
+                        Display more produced &#11166;</a>
                 </div>
             </div>
         </div>
