--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -103,6 +103,7 @@
         </div>
     </div>
     <div>
+        <div class="middle-dashboard">
             <h4>Monthly line production summary - {{ year }}</h4>
             <form method="get">
                 <div class="well">
@@ -161,6 +162,7 @@
                     {% endfor %}
                 </tbody>
             </table>
+        </div>
     </div>
     <div class="right-dashboard">
         <div class="row">
