--- a/templates/gemba/index.html
+++ b/templates/gemba/index.html
@@ -11,4 +11,9 @@
         <p><a href="{% url 'gemba_app:report-choices' %}">Downtime & Scrap Compare</a></p>
         <p><a href="{% url 'gemba_app:lines-3' %}">Set Up View</a></p>
         <p><a href="{% url 'gemba_app:quarantine-view' %}">Quarantine View</a></p>
+        </br>
+        {% if user.is_superuser %}
+        <p><a href="{% url 'gemba_app:export-job-model-csv' %}">Export Job Model to csv</a></p>
+        <p><a href="{% url 'gemba_app:export-job-model-xls' %}">Export Job Model to xls</a></p>
+        {% endif %}
 {% endblock %}
