--- a/templates/gemba/report_choices_2.html
+++ b/templates/gemba/report_choices_2.html
@@ -19,7 +19,7 @@
         {% for o in lines_qs %}
         <tr>
             </br>
-            <td>{{o.name}}&nbsp;&nbsp;<input type="radio" name="Lines" value="{{o.name}}"></td>
+            <td>{{o.name}}&nbsp;&nbsp;<input type="radio" name="line" value="{{o.name}}"></td>
             </br>
         </tr>
         {% endfor %}
