Gemba App changes

--- a/templates/gemba/paretos_view.html
+++ b/templates/gemba/paretos_view.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load widget_tweaks %}
 <h4>Pareto View for {{ line }}:</h4>
-Date range: {{ date_from|date:"d-m-Y" }} - {{ date_to|date:"d-m-Y" }}
+Date range: {{ date_from_|date:"d-m-Y" }} - {{ date_to_|date:"d-m-Y" }}
 
 </br>
 </br>
