--- a/templates/gemba/daily_oee_report_by_shift.html
+++ b/templates/gemba/daily_oee_report_by_shift.html
@@ -2,21 +2,8 @@
 {% block content %}
 {% load mathfilters %}
 
-<h4>Daily OEE Report - {{ pareto_date|date:"d-m-Y" }}</h4>
+<h4>Daily OEE Report - {{ pareto_date|date:"d-m-Y" }} - {{ shift }}</h4>
 <p><a href="{% url 'gemba_app:pareto-view' %}">Go back</a></p>
-
-<form action="{% url 'gemba_app:daily-oee-report_by-shift' pareto_date=pareto_date %}" method="get">
-     <h5>Select a shift:</h5>
-        {% for s in shift_list %}
-        <tr>
-            <td>{{s}}&nbsp;&nbsp;<input type="radio" name="Shift" value="{{s}}"></td>
-            </br>
-        </tr>
-        {% endfor %}
-      </br>
-     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Search
-    </button>
- </form>
 
 <table class="table table-hover">
         <thead>
