--- a/templates/gemba/pareto_view.html
+++ b/templates/gemba/pareto_view.html
@@ -4,11 +4,12 @@
 
 <h4>Daily OEE Report:</h4>
 Select a date
- <form action="{% url 'gemba_app:daily-pareto-search-result' %}" method="get">
+ <form action="{% url 'gemba_app:daily-oee-report' %}" method="get">
     <input name="q" type="date">
      <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Search
     </button>
  </form>
+
 <table class="table table-hover">
         <thead>
         <tr>
