--- a/templates/gemba/paretos_view_choices.html
+++ b/templates/gemba/paretos_view_choices.html
@@ -12,7 +12,6 @@ Date range: {{ date_from_|date:"d-m-Y" }} - {{ date_to_|date:"d-m-Y" }}
             <th scope="col">Pareto Date</th>
             <th scope="col">Line</th>
             <th scope="col">Shift</th>
-            <th scope="col">Operators</th>
             <th scope="col">Availability</th>
             <th scope="col">Performance</th>
             <th scope="col">Quality</th>
@@ -20,19 +19,26 @@ Date range: {{ date_from_|date:"d-m-Y" }} - {{ date_to_|date:"d-m-Y" }}
         </tr>
         </thead>
         <tbody>
-        {% for item in paretos %}
+        {% for item in page_obj %}
         <tr>
             <th><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.id }}</a></th>
             <td>{{ item.pareto_date|date:"d-m-Y" }}</td>
             <td>{{ item.line }}</td>
             <td>{{ item.shift }}</td>
-            <td>{{ item.ops_otg }}</td>
             <td>{{ item.availability }}%</td>
             <td>{{ item.performance }}%</td>
             <td>{{ item.quality }}%</td>
             <td>{{ item.oee }}%</td>
         </tr>
         {% endfor %}
+        <tr>
+            <th colspan="3">Average OEE Elements</th>
+            <td></td>
+            <td><b>{{ calculation.avg_availability }}%</b></td>
+            <td><b>{{ calculation.avg_performance }}%</b></td>
+            <td><b>{{ calculation.avg_quality }}%</b></td>
+            <td><b>{{ calculation.avg_oee }}%</b></td>
+        </tr>
         </tbody>
 </table>
 <div class="pagination">
